Bug 91840 - UI Text background colour picker sets wrong default colour
Summary: UI Text background colour picker sets wrong default colour
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-03 21:48 UTC by Katarina Behrens (Inactive)
Modified: 2016-10-25 19:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Katarina Behrens (Inactive) 2015-06-03 21:48:04 UTC
Click on a font colour toolbar or sidebar button. Taken from top down, the very 1st button in a colour picker pop-up that appears (labelled "Automatic") sets the font colour to a default one (black usually)

Now click on a new text background colour toolbar or sidebar button. There are two issues

0. (minor) The default colour button is not labelled ("Automatic" string is missing)
1. (major) When clicked, it sets text background colour to black. Not useful at all, since text is usually black too. It should set it to transparent instead (it works that way in Writer)
Comment 1 Katarina Behrens (Inactive) 2015-06-04 10:36:34 UTC
This is very much confirmed
Comment 2 Commit Notification 2015-06-04 13:18:58 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=42f4a65103a1a6d281ea201392aae97213421ff4

tdf#91840: Default to transparent text background

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-06-07 13:31:48 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=339429879b0fe9a0de83167840391b09933fcc7d&h=libreoffice-5-0

tdf#91840: Default to transparent text background

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Philippe Jung 2015-06-07 13:33:40 UTC
Previously pushed to master.
Pushed to 50 and checked on local machine with libreoffice-5-0 build. 
Bug reproduced before patch. Bug disappeared after patch.