tdf#91840: Default to transparent text background

(+ label the button)

Change-Id: Icc6a0c5e3e715bcfe1392496bef2514fd1bdb62b